--- a/views/partials/cdn-links.ejs
+++ b/views/partials/cdn-links.ejs
@@ -1,3 +1,9 @@
+<!-- Script agresivo para forzar HTTP (debe ir primero) -->
+<script src="/js/force-http.js"></script>
+
+<!-- Configuración del sistema -->
+<script src="/js/config.js"></script>
+
 <!-- Bootstrap 5 CSS -->
 <link href="http://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Bootstrap Icons -->
